<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Puzzly</string>

    <!-- ~~~~~~~~~~~~~~~~~~~ MENU ~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <string name="menu_settings">SETTINGS</string>
    <string name="menu_back">Back</string>
    <string name="menu_settings_long_click">To open preferences in game, tap and hold your finger on the preferences button</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ MENU DIALOG~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="menu_dialog_title">Reminder</string>
    <string name="menu_dialog_message">If you like the app, please leave your review</string>
    <string name="menu_dialog_yes">Yes</string>
    <string name="menu_dialog_no">No</string>
    <string name="menu_dialog_later">Later</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ SETTINGS ~~~~~~~~~~~~~~~~~~~~~~ !-->

    <string name="settings_play_background_music">Background music</string>
    <string name="settings_play_sound">Sound in game</string>
    <string name="settings_vibrate">Game vibration</string>
    <string name="settings_analytics">Google Analytics</string>
    <string name="settings_display_inner_borders">Display inner borders</string>
    <string name="settings_localize_app_language">Language of settings</string>
    <string name="settings_localize_study_language">Language of game</string>

    <string name="settings_purchase">Version without ads</string>
    <string name="settings_share">Share on</string>

    <string-array name="settings_languages">
        <item>English</item>
        <item>Українська</item>
        <item>Русский</item>
        <item>Magyar</item>
        <item>Deutsch</item>
        <item>la France</item>
        <item>España</item>
        <item>中文</item>
        <item>العربية</item> <!-- Arabic !-->
        <!-- <item>עִברִית</item> Hebrew !-->
        <item>हिंदी</item> <!-- Hindi !-->
    </string-array>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ SHARE ~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="share_message">Puzzly is an interesting, fun and educational game for kids aged 2 to 6 years</string>
    <string name="share_twitter_message">Funny puzzle for Kids https://play.google.com/store/apps/details?id=com.mobilez365.puzzly</string>
    <string name="share_login_error">Can\'t login. Please try again later</string>
    <string name="share_post_error">Can\'t share. Please try again later</string>
    <string name="share_internet_error">No internet connection</string>
    <string name="share_post_done">Sharing completed</string>
    <string name="share_post_duplicate">Already shared</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ CHOOSE LEVEL ~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="choose_level_new_level">New level</string>
    <string name="choose_level_locked_level">Level locked</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ InAppPurchase ~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="purchaseKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgvaUVCzE0PcWh9a4IynfouPxMvRXulwyCHC0WVcz4gwHf9X2y
        8E0z1VUDQg9XaCdnveVsvO6gzeejwRz9EuBH4xqDfXqVRpFsR0LyfDqkHPF6L/FRn1j0Iu7XC9wp3KABV/3uh5vzCi9Qtw4/OVH03jSU9tdXuD1zDng
        KXQy2dagtSEM6J971cagW+fhWi8jSVPMaijB6y8QH+2XnXm4ANQ/CY9OqZ9Y6WYRqjH7yiSPEv17mQHV/v39NsFO70oXScbxRv8okTaiZKezZ64Txe6
        TqB3F4FVsidSxy4fad/n0N9qjV5n5qIRQYwX8VxI65zwtRD9yAJUw4l5aP9OPewIDAQAB/FRn1j0Iu7XC9wp3KABV/3uh5vzCi9Qtw4/OVH03jSU9td
        XuD1zDngKXQy2dagtSEM6J971cagW+fhWi8jSVPMaijB6y8QH+2XnXm4ANQ/CY9OqZ9Y6WYRqjH7yiSPEv17mQHV/v39NsFO70oXScbxRv8okTaiZKe
        zZ64Txe6TqB3F4FVsidSxy4fad/n0N9qjV5n5qIRQYwX8VxI65zwtRD9yAJUw4l5aP9OPewIDAQAB</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ GOOGLE MOBILE ADS ~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="adUnitId">ca-app-pub-8370463222730338/1478726002</string>
    <string name="interstitialAdUnitId">ca-app-pub-8370463222730338/1339125208</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ GOOGLE ANALYTICS ~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="activity_main_menu">Main menu screen</string>
    <string name="activity_settings">Settings screen</string>
    <string name="btn_music_enabled">Music enabled</string>
    <string name="btn_sound_enabled">Sound enabled</string>
    <string name="btn_display_border">Display border enabled</string>
    <string name="btn_app_language">Language of application</string>
    <string name="btn_study_language">Language of study</string>
    <string name="activity_choose_fill_game">Choose FILL game screen</string>
    <string name="activity_choose_reveal_game">Choose REVEAL game screen</string>
    <string name="activity_fill_game">FILL game screen</string>
    <string name="activity_reveal_game">REVEAL game screen</string>
    <string name="bonus_level_flower">Flower bonus level</string>
    <string name="bonus_level_tree">Tree bonus level</string>
    <string name="bonus_level_shake">Shake bonus level</string>
    <string name="bonus_level_hedgehog">Hedgehog bonus level</string>
    <string name="bonus_level_move">Move bonus level</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ StartAD ~~~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="startADId">539956448cc1631e00000000</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->

    <!-- ~~~~~~~~~~~~~~~~~~~ Game Items ~~~~~~~~~~~~~~~~~~~~ !-->
    <string name="piggy">Piggy</string>
    <string name="pigeon">Pigeon</string>
    <string name="frogling">Frogling</string>
    <string name="rabbit">Rabbit</string>
    <string name="hen">Hen</string>
    <string name="octopus">Octopus</string>
    <string name="pencil">Pencil</string>
    <string name="ice_cream">Ice cream</string>
    <string name="fingerling">Fingerling</string>
    <string name="elephant">Elephant</string>
    <string name="lamb">Lamb</string>
    <string name="owl">Owl</string>
    <string name="snail">Snail</string>
    <string name="squirrel">Squirrel</string>
    <string name="apple">Apple</string>
    <string name="carrot">Carrot</string>
    <string name="goat">Goat</string>
    <string name="bee">Bee</string>
    <string name="turtle">Turtle</string>
    <string name="dolphin">Dolphin</string>
    <string name="hippo">Hippo</string>
    <string name="teddy_bear">Teddy-bear</string>
    <string name="penguin">Penguin</string>
    <string name="snake">Snake</string>
    <string name="flamingo">Flamingo</string>
    <string name="toucan">Toucan</string>
    <string name="giraffe">Giraffe</string>
    <string name="monkey">Monkey</string>
    <string name="zebra">Zebra</string>
    <string name="lion">Lion</string>
    <string name="kettle">Kettle</string>
    <string name="car">Car</string>
    <string name="eggplant">Eggplant</string>
    <string name="bread">Bread</string>
    <string name="baseball_cap">Baseball cap</string>
    <string name="computer_chair">Computer chair</string>
    <string name="train">Train</string>
    <string name="wagon">Wagon</string>
    <string name="peas">Peas</string>
    <string name="pot_with_honey">Pot with honey</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="potato">Potato</string>
    <string name="key">Key</string>
    <string name="strawberries">Strawberries</string>
    <string name="crab">Crab</string>
    <string name="corn">Corn</string>
    <string name="jug_with_milk">Jug with milk</string>
    <string name="light_bulb">Light bulb</string>
    <string name="stork">Stork</string>
    <string name="pepper">Pepper</string>
    <string name="cock">Cock</string>
    <string name="cancer">Сrawfish</string>
    <string name="backpack">Backpack</string>
    <string name="wizard_hat">Wizard hat</string>
    <string name="soother">Soother</string>
    <string name="stapler">Stapler</string>
    <string name="beet">Beet</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="shuttlecocks">Shuttlecocks</string>
    <string name="hamburger">Hamburger</string>
    <string name="yacht">Yacht</string>
    <string name="scrambled_eggs">Scrambled eggs</string>
    <string name="umbrella">Umbrella</string>
    <string name="banana">Banana</string>
    <string name="pear">Pear</string>
    <string name="lemon">Lemon</string>
    <string name="lime">Lime</string>
    <string name="cherry">Cherry</string>
    <string name="tea_cup">Tea cup</string>
    <string name="radish">Radish</string>
    <string name="rhino">Rhino</string>
    <string name="sea_bear">Sea bear</string>
    <string name="crocodile">Crocodile</string>
    <string name="crew_cut">Crew cut</string>
    <string name="gorilla">Gorilla</string>
    <string name="fox">Fox</string>
    <string name="pitching">Duck</string>
    <string name="dog">Dog</string>
    <string name="koala">Koala</string>
    <string name="butterfly">Butterfly</string>

    <string name="perfect">Perfect</string>
    <string name="wonderful">Wonderful</string>
    <string name="well_done">Well done</string>
    <string name="good_job">Good job</string>
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ !-->
</resources>
