<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_game">

    <RelativeLayout
        android:id="@+id/llScreenHeader_SS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/settings_header_bg">

        <ImageButton
            android:id="@+id/btnBack_SS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderBTN"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tvHeaderName_SS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HeaderName"
            android:layout_toRightOf="@id/btnBack_SS"
            android:layout_alignTop="@id/btnBack_SS"
            android:layout_alignBottom="@id/btnBack_SS"
            android:text="@string/menu_settings"
            android:gravity="center"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBanner_SS"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/swMain_SS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llScreenHeader_SS"
        android:layout_above="@id/llBanner_SS">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                    android:id="@+id/rlPlayBackgroundMusic_SS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.mobilez365.puzzly.customViews.ColorsCheckBox
                    android:id="@+id/ccbPlayBackgroundMusic_SS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsChooseBox"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_play_background_music"
                        android:id="@+id/tvPlayBackgroundMusic_SS"
                        android:layout_toRightOf="@+id/ccbPlayBackgroundMusic_SS"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/tc_settings"
                        android:textSize="25dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/rlPlaySound_SS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rlPlayBackgroundMusic_SS">

                <com.mobilez365.puzzly.customViews.ColorsCheckBox
                    android:id="@+id/ccbPlaySound_SS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsChooseBox"
                    />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_play_sound"
                        android:id="@+id/tvPlaySound_SS"
                        android:layout_toRightOf="@+id/ccbPlaySound_SS"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/tc_settings"
                        android:textSize="25dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/rlVibrate_SS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rlPlaySound_SS">

                <com.mobilez365.puzzly.customViews.ColorsCheckBox
                    android:id="@+id/ccbVibrate_SS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsChooseBox"
                    />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_vibrate"
                        android:id="@+id/tvVibrate_SS"
                        android:layout_toRightOf="@+id/ccbVibrate_SS"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/tc_settings"
                        android:textSize="25dp"/>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/rlDisplayInnerBorders_SS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rlVibrate_SS">

                <com.mobilez365.puzzly.customViews.ColorsCheckBox
                    android:id="@+id/ccbDisplayInnerBorders_SS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsChooseBox"
                    />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_display_inner_borders"
                        android:id="@+id/tvDisplayInnerBorders_SS"
                        android:layout_toRightOf="@+id/ccbDisplayInnerBorders_SS"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/tc_settings"
                        android:textSize="25dp"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llStudyLanguagePanel_SS"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/settings_header_bg"
                android:layout_below="@+id/rlDisplayInnerBorders_SS"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvStudyLanguage_SS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsLanguage"
                    android:text="@string/settings_localize_study_language"
                    android:layout_weight="30"/>

                <Spinner
                    android:id="@+id/spinnerChooseStudyCountry_SS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:entries="@array/settings_languages"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAppLanguagePanel_SS"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llStudyLanguagePanel_SS"
                android:gravity="center"
                android:background="@color/settings_header_bg">

                <TextView
                    android:id="@+id/tvAppLanguage_SS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsLanguage"
                    android:text="@string/settings_localize_app_language"
                    android:layout_weight="30"/>

                <Spinner
                    android:id="@+id/spinnerChooseAppCountry_SS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:entries="@array/settings_languages"/>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>