<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parentPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout android:id="@+id/topPanel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="vertical" android:background="@color/reminder_title">
        <LinearLayout android:id="@+id/title_template"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:layout_marginTop="6dip"
                      android:layout_marginBottom="9dip"
                      android:layout_marginStart="10dip"
                      android:layout_marginEnd="10dip">
            <com.android.internal.widget.DialogTitle android:id="@+id/alertTitle"
                                                     style="?android:attr/textAppearanceLarge"
                                                     android:singleLine="true"
                                                     android:ellipsize="end"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:textAlignment="viewStart"
                                                     android:text="@string/menu_dialog_title"
                                                     android:textColor="@android:color/white"
                                                     android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <ImageView android:id="@+id/titleDivider"
                   android:layout_width="match_parent"
                   android:layout_height="1dip"
                   android:visibility="gone"
                   android:scaleType="fitXY"
                   android:gravity="fill_horizontal"
                   android:src="@android:drawable/divider_horizontal_dark"/>
        <!-- If the client uses a customTitle, it will be added here. -->
    </LinearLayout>

    <LinearLayout android:id="@+id/contentPanel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <ScrollView android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dip"
                    android:paddingBottom="12dip"
                    android:paddingStart="14dip"
                    android:paddingEnd="10dip"
                    android:overScrollMode="ifContentScrolls">
            <TextView android:id="@+id/message"
                      style="?android:attr/textAppearanceMedium"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="5dip" android:text="@string/menu_dialog_message"
                      android:textColor="@color/reminder_text"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout android:id="@+id/buttonPanel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="vertical" android:divider="@color/text_color" android:clickable="false">
        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dip"
                android:paddingStart="2dip"
                android:paddingEnd="2dip"
                android:measureWithLargestChild="true">
            <LinearLayout android:id="@+id/leftSpacer"
                          android:layout_weight="0.25"
                          android:layout_width="0dip"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />
            <Button android:id="@+id/menu_dialog_yes"
                    android:layout_width="0dip"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" android:text="@string/menu_dialog_yes"
                    android:textColor="@color/reminder_text"/>
            <Button android:id="@+id/menu_dialog_no"
                    android:layout_width="0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" android:text="@string/menu_dialog_no"
                    android:textColor="@color/reminder_text"/>
            <Button android:id="@+id/menu_dialog_later"
                    android:layout_width="0dip"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" android:text="@string/menu_dialog_later"
                    android:textColor="@color/reminder_text"/>
            <LinearLayout android:id="@+id/rightSpacer"
                          android:layout_width="0dip"
                          android:layout_weight="0.25"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
